more work on ascensions

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -2,10 +2,10 @@
 
 # LOC
 # ------------------------------------------------------------
-	tec_loc_ap_type_biological:0 "§EBiological Ascension§!"
-	tec_loc_ap_type_technological:0 "§ETechnological Ascension§!"
-	tec_loc_ap_type_mystical:0 "§EMystical Ascension§!"
-	tec_loc_ap_type_hybrid:0 "§EHybrid Ascension§!"
+	tec_loc_ap_type_biological:0 "§E['concept_tec_ascension_type_biological']§!"
+	tec_loc_ap_type_technological:0 "§E['concept_tec_ascension_type_technological']§!"
+	tec_loc_ap_type_mystical:0 "§E['concept_tec_ascension_type_mystical']§!"
+	tec_loc_ap_type_hybrid:0 "§E['concept_tec_ascension_type_hybrid']§!"
 	tec_loc_ap_type_hybrid_biomechanical:0 "§EHybrid Ascension§!"
 	tec_loc_ap_type_hybrid_biopsionic:0 "§EHybrid Ascension§!"
 	tec_loc_ap_type_hybrid_cyberpsionic:0 "§EHybrid Ascension§!"
@@ -17,6 +17,15 @@
 	tec_loc_ap_u_traditions:0 "§EUnlocks Traditions:§!"
 	tec_loc_ap_u_technology:0 "§EUnlocks Technology:§!"
 	tec_loc_ap_u_technologies:0 "§EUnlocks Technologies:§!"
+
+
+	tec_loc_ap_chosen_path:0 "§EChosen Path:§!"
+# /
+
+# Concepts
+	concept_tec_branching_paths:0 "Branching Ascension Path"
+	concept_tec_branching_paths_icon:0 "£trigger_tec_question£"
+	concept_tec_branching_paths_desc:0 "The situation will allow to follow §YDifferent Paths§! based on the decisions taken during its duration and unlock a §YTradition§! related to that path."
 # /
 
 # Misc
@@ -47,10 +56,10 @@
 	tr_tec_genetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation, with the appropriate options picked."
 	tr_tec_cybernetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_cybernetic_path_t1$§! situation, with the appropriate options picked."
 
-	tr_tec_biogenic_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation."
+	tr_tec_biogenics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation."
 	tr_tec_bioware_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_cybernetic_path_t1$§! situation, with the appropriate options picked."
 	tr_tec_ethereal_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation, with the appropriate options picked."
-	tr_tec_psychic_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation, with the appropriate options picked."
+	tr_tec_psychics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation, with the appropriate options picked."
 
 
 # AP requirements and prerequisites
@@ -144,30 +153,70 @@
 # MYSTICAL PATHS
 # ------------------------------------------------------------
 # ------------------------------------------------- Esoteric Base
+ # Generic
 	ap_mind_over_matter:0 "Mind Over Matter"
-	ap_mind_over_matter_desc:0 "$tec_loc_ap_type_esoteric$ - $tec_ap_base_ascension$\nOnly a fraction of the potential contained within our minds has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will."
+	ap_mind_over_matter_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\n\nOnly a fraction of the potential contained within our minds has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will."
 
- # ---- Effects
-	#old_mind_over_matter_project_tooltip:0 "We will prepare §Y$situation_tec_psionic_path_t1$§! situation, which will help to discover the psionic potential of our species."
-	#old_mind_over_matter_project_tooltip_discovered:0 "We will prepare §Y$situation_tec_psionic_path_t1$§! situation, which will help to discover the psionic potential of our species, making them gain the §MLatent Psionic§! trait.\n\nThe Latent Psionic trait provide £job£ Job output and awakens special psychic capacities on some individuals, but reduce our species £mod_planet_pop_assembly_mult£ Natural and Artificial growth."
-	ap_mind_over_matter_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_psionic_path_t1$§!\nThe §Y$situation_tec_psionic_path_t1$§! will help our empire to unlock our esoteric and mental capacities.\n\n"
+	ap_mind_over_matter_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_mystical_neutral_t1$§! ['concept_tec_branching_paths_icon']\n - The §Y$situation_tec_ascension_mystical_neutral_t1$§! situation will help us to unlock our latent potential.\n\n"
+	# Unlocks
+	tec_ap_unlock_tech_psionic_theory:0 "$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\n - Provides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option.\n\n"
+	tec_ap_unlock_tech_telepathy:0 "$tec_loc_ap_u_technology$ §H$tech_telepathy$§!\n - Provides the £society£ §Y$tech_telepathy$§! Technology.\n\n"
+ # /
+ # Psionic
+	ap_mind_over_matter_psionic:0 "Shrouded Awakening"
+	ap_mind_over_matter_psionic_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nOnly a fraction of the potential contained within our minds has been unlocked; now the shroud is empowering the psionic capacities we are awakening... to reshape us."
 
- # ---- Provides
-	tec_ap_unlock_tech_psionic_theory:0 "$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\nProvides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option."
-	tec_ap_unlock_tech_telepathy:0 "$tec_loc_ap_u_technology$ §H$tech_telepathy$§!\nProvides the £society£ §Y$tech_telepathy$§! Technology."
-	tec_ap_unlock_psionic_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_tec_vanilla_psionics$§!\nUnlocks the §Y$tradition_tec_vanilla_psionics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	ap_mind_over_matter_psionic_tooltip:0 "$tec_loc_ap_chosen_path$ §MPsionics§!\nWe have been able to venture into a new realm, a new dimension; the §MShroud§! empowers our kind and awaits our call.\n\n"
+	tec_ap_unlock_psionic_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_psionics$§!\nUnlocks the §Y$tradition_psionics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
 
- # ---- Gates
-	ap_mind_over_matter_steps:0 "\n\n§HBase Ascension - Psionics§!"
+ # /
+ # Psychic
+	ap_mind_over_matter_psychic:0 "Secrets of the Mind"
+	ap_mind_over_matter_psychic_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nOnly a fraction of the potential contained within our minds has been unlocked; we are now aware of the capacities that lie dormant in our kind... we are aware of the power to alter everything we can master."
 
- # ---- Requirements
-	tec_ap_require_tech_planetary_unification:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_planetary_unification$§! technology."
-	tec_ap_require_tech_colonial_centralization:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_colonial_centralization$§! technology."
-	tec_ap_require_tech_galactic_administration:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_galactic_administration$§! technology."
+	ap_mind_over_matter_psychic_tooltip:0 "$tec_loc_ap_chosen_path$ §PPsychic§!\nWe are on the verge of mastering the inner powers we manifested, our §PMind§! will be able to defy and reshape reality itself.\n\n"
+	tec_ap_unlock_psionic_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_tec_psychics$§!\nUnlocks the §Y$tradition_tec_psychics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+
+ # /
+ # Esoteric
+	ap_mind_over_matter_esoteric:0 "TODO"
+	ap_mind_over_matter_esoteric_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nTODO."
+
+	ap_mind_over_matter_esoteric_tooltip:0 "TODO"
+
+ # /
+ # Ethereal (psi)
+	ap_mind_over_matter_psionic_ethereal:0 "TODO"
+	ap_mind_over_matter_psionic_ethereal_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nTODO."
+
+	ap_mind_over_matter_psionic_ethereal_tooltip:0 "TODO"
+
+ # /
+ # Ethereal (psy)
+	ap_mind_over_matter_psychic_ethereal:0 "TODO"
+	ap_mind_over_matter_psychic_ethereal_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nTODO."
+
+	ap_mind_over_matter_psychic_ethereal_tooltip:0 "TODO"
+
+ # /
+ # OLD
+	# ---- Generic
+		ap_mind_over_matter_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_psionic_path_t1$§!\nThe §Y$situation_tec_psionic_path_t1$§! will help our empire to unlock our esoteric and mental capacities.\n\n"
+
+	# ---- Provides
+
+	# ---- Gates
+		ap_mind_over_matter_steps:0 "\n\n§HBase Ascension - Psionics§!"
+
+	# ---- Requirements
+		tec_ap_require_tech_planetary_unification:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_planetary_unification$§! technology."
+		tec_ap_require_tech_colonial_centralization:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_colonial_centralization$§! technology."
+		tec_ap_require_tech_galactic_administration:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_galactic_administration$§! technology."
+ # /
 # /
 # ------------------------------------------------- Psionic T1
 	ap_tec_psionic_awakening:0 "Psionic Awakening"
-	ap_tec_psionic_awakening_desc:0 "$tec_loc_ap_type_esoteric$ - $tec_ap_base_ascension$\nWe have expanded the knowledge of our mental capacity, and now... we know; A whole new universe has been opened to our eyes and minds, and it's starting to seep into some of us, giving immense new capacities."
+	ap_tec_psionic_awakening_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nWe have expanded the knowledge of our mental capacity, and now... we know; A whole new universe has been opened to our eyes and minds, and it's starting to seep into some of us, giving immense new capacities."
 
  # ---- Effects
 	#old_mind_over_matter_project_tooltip:0 "We will prepare §Y$situation_tec_psionic_path_t1$§! situation, which will help to discover the psionic potential of our species."
@@ -190,7 +239,7 @@
 
 # ------------------------------------------------- Psionic T2
 	ap_tec_psionic_ascendance:0 "Psionic Ascendance"
-	ap_tec_psionic_ascendance_desc:0 "$tec_loc_ap_type_esoteric$ - $tec_ap_evolved_ascension$\nWe have seen what no one saw, we have heard what no one ever had; the Shroud is now as akin to us like dreaming, the void is no longer a silent and empty space. Where we're going, we won't need eyes to see or ears to hear, but our mind to understand the vastness in front of us."
+	ap_tec_psionic_ascendance_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_evolved_ascension$\nWe have seen what no one saw, we have heard what no one ever had; the Shroud is now as akin to us like dreaming, the void is no longer a silent and empty space. Where we're going, we won't need eyes to see or ears to hear, but our mind to understand the vastness in front of us."
 
  # ---- Effects
 	ap_tec_psionic_ascendance_tooltip:0 "We will prepare the §Y$situation_tec_psionic_path_t2$§! situation, in order to further discover the true meaning of the §YPsionic Potential§! of our species."
@@ -209,7 +258,7 @@
 
 # ------------------------------------------------- Ethereal T1
 	ap_tec_transcendence:0 "Transcendence"
-	ap_tec_transcendence_desc:0 "$tec_loc_ap_type_esoteric$ - $tec_ap_transformative_ascension$\nShed from mortal and physical bounds, we are way more than we even dreamed of being, but reality bears a burden we must overcome, a barrier we must pass, a frontier we must cross, to be more..."
+	ap_tec_transcendence_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_transformative_ascension$\nShed from mortal and physical bounds, we are way more than we even dreamed of being, but reality bears a burden we must overcome, a barrier we must pass, a frontier we must cross, to be more..."
 
  # ---- Effects
 	ap_tec_transcendence_tooltip:0 "..."
@@ -227,7 +276,7 @@
 
 # ------------------------------------------------- Ethereal T2
 	ap_tec_ethereal_transmutation:0 "Ethereal Transmutation"
-	ap_tec_ethereal_transmutation_desc:0 "$tec_loc_ap_type_esoteric$ - $tec_ap_evolved_ascension$\n..."
+	ap_tec_ethereal_transmutation_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_evolved_ascension$\n..."
 	ap_tec_ethereal_transmutation_tooltip:0 "§RAscension perk not ready.§!\n\nWe will prepare a way to release our true §YPotential§! out of the §RPhysical constraints§!."
 	ap_tec_ethereal_transmutation_steps:0 "\n\n§HTier II - Form Sublimation Ascension path§!"
 # /
