--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -222,9 +222,11 @@
 	concept_tec_ascension_type_biological_desc:0 "Biological Ascensions allow to reach the culprit of genetic edition and tailoring, allowing your empire to create the perfect species. It has a heavy focus on species traits and bonuses to particular productions. Genetics and Biogenics compose the main foundation of this type of Ascensions."
 	concept_tec_ascension_type_technological:0 "Technological Ascension"
 	concept_tec_ascension_type_technological_desc:0 "Technological Ascensions are grounded on a heavy use of technology to replace, either partially or completely, your empire species composition and bodies. It has a heavy focus on performance in exchange of drawbacks or radical changes. Cybernetics, Synthetic and Virtual paths compose the main foundation of this type of Ascensions."
+	concept_tec_ascension_type_technological_synthetics:0 "$concept_tec_ascension_type_technological$"
+	concept_tec_ascension_type_technological_synthetics_desc:0 "$concept_tec_ascension_type_technological_desc$"
 	concept_tec_ascension_type_mystical:0 "Mystical Ascension"
 	concept_tec_ascension_type_mystical_desc:0 "Mystical Ascensions are focused on fantastical and generally non-science based elements, making your empire be in touch with non-material or at least extra-material features. It has a heavy focus on exploring the powers of the mind and other realities. Psionics and Psychic paths compose the main foundation of this type of Ascensions."
-	# Advanced
+	# Advanced TODO ASCENSION
 	concept_tec_ascension_type_genetic:0 "Genetic Ascension"
 	concept_tec_ascension_type_genetic_desc:0 "."
 
