--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -835,73 +835,73 @@
 	tradition_tec_psychic:0 "Psychic Prowess"
 	tradition_tec_psychic_desc:0 "Our mind is our foundation, whose pillars are constituted in our will - We are many, but we are one, we don't need external forces but our sheer mental power to guide us."
 
-	tr_tec_psychic_adopt:0 "$tradition_tec_psychic$ Traditions"
-	tr_tec_psychic_adopt_tooltip:0 "TO DO."
+	tr_tec_psychics_adopt:0 "$tradition_tec_psychic$ Traditions"
+	tr_tec_psychics_adopt_tooltip:0 "TO DO."
 	# Unlocks the psychic potential of 
 
-	tr_tec_psychic_finish:0 "$tradition_tec_psychic$ Traditions Finished"
-	tr_tec_psychic_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
+	tr_tec_psychics_finish:0 "$tradition_tec_psychic$ Traditions Finished"
+	tr_tec_psychics_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 	# Unlocks psychic harmonization/disruption rituals, which alters reality based on the empire decisions.
 
-	tr_tec_psychic_1:0 "Unlocked Potential"
-	tr_tec_psychic_1_delayed:0 "to do"
-	tr_tec_psychic_1_tooltip:0 "TO DO"
+	tr_tec_psychics_1:0 "Unlocked Potential"
+	tr_tec_psychics_1_delayed:0 "to do"
+	tr_tec_psychics_1_tooltip:0 "TO DO"
 
-	tr_tec_psychic_1_hivemind:0 "Collective Psyche"
-	tr_tec_psychic_1_hivemind_delayed:0 "to do"
-	tr_tec_psychic_1_hivemind_tooltip:0 "TO DO"
+	tr_tec_psychics_1_hivemind:0 "Collective Psyche"
+	tr_tec_psychics_1_hivemind_delayed:0 "to do"
+	tr_tec_psychics_1_hivemind_tooltip:0 "TO DO"
 
-	tr_tec_psychic_2:0 "Materialized Will"
-	tr_tec_psychic_2_delayed:0 "to do"
-	tr_tec_psychic_2_tooltip:0 "TO DO"
+	tr_tec_psychics_2:0 "Materialized Will"
+	tr_tec_psychics_2_delayed:0 "to do"
+	tr_tec_psychics_2_tooltip:0 "TO DO"
 
-	tr_tec_psychic_3:0 "Overreaching Thoughts"
-	tr_tec_psychic_3_delayed:0 "to do"
-	tr_tec_psychic_3_tooltip:0 "TO DO"
+	tr_tec_psychics_3:0 "Overreaching Thoughts"
+	tr_tec_psychics_3_delayed:0 "to do"
+	tr_tec_psychics_3_tooltip:0 "TO DO"
 
-	tr_tec_psychic_3_hivemind:0 "Mind Beacons"
-	tr_tec_psychic_3_hivemind_delayed:0 "to do"
-	tr_tec_psychic_3_hivemind_tooltip:0 "TO DO"
+	tr_tec_psychics_3_hivemind:0 "Mind Beacons"
+	tr_tec_psychics_3_hivemind_delayed:0 "to do"
+	tr_tec_psychics_3_hivemind_tooltip:0 "TO DO"
 
-	tr_tec_psychic_4:0 "REPLACE_ME"
+	tr_tec_psychics_4:0 "REPLACE_ME"
 
-	tr_tec_psychic_4A:0 "Gazing into the Abyss"
-	tr_tec_psychic_4A_delayed:0 "to do"
-	tr_tec_psychic_4A_tooltip:0 "TO DO"
+	tr_tec_psychics_4A:0 "Gazing into the Abyss"
+	tr_tec_psychics_4A_delayed:0 "to do"
+	tr_tec_psychics_4A_tooltip:0 "TO DO"
 
-	tr_tec_psychic_4A_hivemind:0 "One with the Abyss"
-	tr_tec_psychic_4A_hivemind_delayed:0 "to do"
-	tr_tec_psychic_4A_hivemind_tooltip:0 "TO DO"
+	tr_tec_psychics_4A_hivemind:0 "One with the Abyss"
+	tr_tec_psychics_4A_hivemind_delayed:0 "to do"
+	tr_tec_psychics_4A_hivemind_tooltip:0 "TO DO"
 
-	tr_tec_psychic_4B:0 "Transmaterial Vision"
-	tr_tec_psychic_4B_delayed:0 "to do"
-	tr_tec_psychic_4B_tooltip:0 "TO DO"
+	tr_tec_psychics_4B:0 "Transmaterial Vision"
+	tr_tec_psychics_4B_delayed:0 "to do"
+	tr_tec_psychics_4B_tooltip:0 "TO DO"
 
-	tr_tec_psychic_4B_hivemind:0 "Transmaterial Connection"
-	tr_tec_psychic_4B_hivemind_delayed:0 "to do"
-	tr_tec_psychic_4B_hivemind_tooltip:0 "TO DO"
+	tr_tec_psychics_4B_hivemind:0 "Transmaterial Connection"
+	tr_tec_psychics_4B_hivemind_delayed:0 "to do"
+	tr_tec_psychics_4B_hivemind_tooltip:0 "TO DO"
 
-	tr_tec_psychic_5:0 "Open Horizon"
-	tr_tec_psychic_5_delayed:0 "to do"
-	tr_tec_psychic_5_tooltip:0 "TO DO"
+	tr_tec_psychics_5:0 "Open Horizon"
+	tr_tec_psychics_5_delayed:0 "to do"
+	tr_tec_psychics_5_tooltip:0 "TO DO"
 
-		tr_tec_psychic_5A:0 "Dark Side of the Mind"
-		tr_tec_psychic_5A_delayed:0 "to do"
-		tr_tec_psychic_5A_tooltip:0 "TO DO"
+		tr_tec_psychics_5A:0 "Dark Side of the Mind"
+		tr_tec_psychics_5A_delayed:0 "to do"
+		tr_tec_psychics_5A_tooltip:0 "TO DO"
 
-		tr_tec_psychic_5A_hivemind:0 "Shadow in the Mind"
-		tr_tec_psychic_5A_hivemind_delayed:0 "to do"
-		tr_tec_psychic_5A_hivemind_tooltip:0 "TO DO"
+		tr_tec_psychics_5A_hivemind:0 "Shadow in the Mind"
+		tr_tec_psychics_5A_hivemind_delayed:0 "to do"
+		tr_tec_psychics_5A_hivemind_tooltip:0 "TO DO"
 
-		tr_tec_psychic_5B:0 "Endless Mind"
-		tr_tec_psychic_5B_delayed:0 "to do"
-		tr_tec_psychic_5B_tooltip:0 "TO DO"
+		tr_tec_psychics_5B:0 "Endless Mind"
+		tr_tec_psychics_5B_delayed:0 "to do"
+		tr_tec_psychics_5B_tooltip:0 "TO DO"
 
-		tr_tec_psychic_5B_hivemind:0 "Endless Minds"
-		tr_tec_psychic_5B_hivemind_delayed:0 "to do"
-		tr_tec_psychic_5B_hivemind_tooltip:0 "TO DO"
+		tr_tec_psychics_5B_hivemind:0 "Endless Minds"
+		tr_tec_psychics_5B_hivemind_delayed:0 "to do"
+		tr_tec_psychics_5B_hivemind_tooltip:0 "TO DO"
 
-	tr_tec_psychic_6:0 "REPLACE_ME"
+	tr_tec_psychics_6:0 "REPLACE_ME"
 
 	# Neut rituals
 		# Manifestation of Nature - Creates a space storm on each system with a Psychic relay built on a starbase
