typos + megacity loc

--- a/localisation/english/replace/!_evolved_to_do_v10_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_v10_l_english.yml
@@ -2,6 +2,11 @@
 
 #v10 - Ascension Patch
 
+# Civics
+	tec_district_unusable_megacities:0 "§Y$trigger_tec_warning$ This district is unusable due to our Megapolis building standards!§!"
+
+# /
+
 # Ref
 	building_tec_ref_1:0 "Orbital Mining Processor"
 	building_tec_ref_1_plural:0 "Orbital Mining Processors"
