--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -155,7 +155,7 @@
 # ------------------------------------------------- Esoteric Base
  # Generic
 	ap_mind_over_matter:0 "Mind Over Matter"
-	ap_mind_over_matter_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\n\nOnly a fraction of the potential contained within our minds has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will."
+	ap_mind_over_matter_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\n\n§LOnly a fraction of the potential contained within our minds has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will.§!"
 
 	ap_mind_over_matter_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_mystical_neutral_t1$§! ['concept_tec_branching_paths_icon']\n - The §Y$situation_tec_ascension_mystical_neutral_t1$§! situation will help us to unlock our latent potential.\n\n"
 	# Unlocks
