--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -157,17 +157,17 @@
 	ap_mind_over_matter:0 "Mind Over Matter"
 	ap_mind_over_matter_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\n\n§LOnly a fraction of the potential contained within our minds has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will.§!"
 
-	ap_mind_over_matter_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_mystical_neutral_t1$§! ['concept_tec_branching_paths_icon']\n - The §Y$situation_tec_ascension_mystical_neutral_t1$§! situation will help us to unlock our latent potential.\n\n"
+	ap_mind_over_matter_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_mystical_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_mystical_neutral_t1$§! situation will help us to unlock our latent potential.\n\n"
 	# Unlocks
-	tec_ap_unlock_tech_psionic_theory:0 "$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\n - Provides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option.\n\n"
-	tec_ap_unlock_tech_telepathy:0 "$tec_loc_ap_u_technology$ §H$tech_telepathy$§!\n - Provides the £society£ §Y$tech_telepathy$§! Technology.\n\n"
+	tec_ap_unlock_tech_psionic_theory:0 "$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\n- Provides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option.\n\n"
+	tec_ap_unlock_tech_telepathy:0 "$tec_loc_ap_u_technology$ §H$tech_telepathy$§!\n- Provides the £society£ §Y$tech_telepathy$§! Technology.\n\n"
  # /
  # Psionic
 	ap_mind_over_matter_psionic:0 "Shrouded Awakening"
 	ap_mind_over_matter_psionic_desc:0 "$tec_loc_ap_type_mystical$ - $tec_ap_base_ascension$\nOnly a fraction of the potential contained within our minds has been unlocked; now the shroud is empowering the psionic capacities we are awakening... to reshape us."
 
 	ap_mind_over_matter_psionic_tooltip:0 "$tec_loc_ap_chosen_path$ §MPsionics§!\nWe have been able to venture into a new realm, a new dimension; the §MShroud§! empowers our kind and awaits our call.\n\n"
-	tec_ap_unlock_psionic_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_psionics$§!\nUnlocks the §Y$tradition_psionics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	tec_ap_unlock_psionic_tradition:0 "$tec_loc_ap_u_tradition$ §H$tradition_psionics$§!\n- Unlocks the §Y$tradition_psionics$§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
 
  # /
  # Psychic
