--- a/localisation/english/replace/!_evolved_to_do_v10_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_v10_l_english.yml
@@ -3,7 +3,9 @@
 #v10 - Ascension Patch
 
 # Civics
-	tec_district_unusable_megacities:0 "§Y$trigger_tec_warning$ This district is unusable due to our Megapolis building standards!§!"
+	tec_urban_district_unusable_megacities:0 "§Y$trigger_tec_warning$ This district is unusable due to our Megapolis building standards!§!"
+	tec_urban_district_unusable_machine_extraction:0 "§Y$trigger_tec_warning$ This district is unusable due to our Extraction Capital!§!"
+	tec_urban_district_unusable_special_colony:0 "§Y$trigger_tec_warning$ This district is unusable in this Special Colony!§!"
 
 # /
 
