some tech adjustments + dark cons gestalt to do

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -756,6 +756,16 @@
 		civic_corporate_dark_consortium: "§L£tec_civic_feature£§!Shadow Corporation"
 		civic_corporate_dark_consortium_desc: "$civic_dark_consortium_desc$"
 		civic_corporate_dark_consortium_effects: "$civic_dark_consortium_effects$"
+
+		civic_tec_hive_dark_consortium: "§L£tec_civic_feature£§!Obscure Weavers"
+		civic_tec_hive_dark_consortium_desc: "['concept_tec_feature_civic']\n\nTODO CODE REWORK."
+		civic_tec_hive_dark_consortium_effects: "$civic_dark_consortium_effects$"
+		civic_tec_hive_dark_consortium_paragons_effects: "$civic_dark_consortium_effects$\n\n$tec_loc_c_unlocks_feature$ §H£sr_dark_matter£ Entropic Knowledge§!\n- Researchers produce §G+$@councilor_dark_consortium_researcher_dark_matter$§! per §Y$councilor_gestalt_cognitive_with_icon$§! (or homonymous) skill level."
+
+		civic_tec_machine_dark_consortium: "§L£tec_civic_feature£§!Entropic Analyzers"
+		civic_tec_machine_dark_consortium_desc: "['concept_tec_feature_civic']\n\nTODO CODE REWORK."
+		civic_tec_machine_dark_consortium_effects: "$civic_dark_consortium_effects$"
+		civic_tec_machine_dark_consortium_paragons_effects: "$civic_tec_hive_dark_consortium_paragons_effects$"
 	# /
  # /
 
