--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -221,7 +221,7 @@
 	concept_tec_ascension_type_biological:0 "Biological Ascension"
 	concept_tec_ascension_type_biological_desc:0 "Biological Ascensions allow to reach the culprit of genetic edition and tailoring, allowing your empire to create the perfect species. It has a heavy focus on species traits and bonuses to particular productions. Genetics and Biogenics compose the main foundation of this type of Ascensions."
 	concept_tec_ascension_type_technological:0 "Technological Ascension"
-	concept_tec_ascension_type_technological_desc:0 "Technological Ascensions are grounded on a heavy use of technology to replace, either partially or completely, your empire species composition and bodies. It has a heavy focus on performance in exchange of drawbacks or radical changes. Cybernetics, Synthetic and Virtual paths compose the main foundation of this type of Ascensions."
+	concept_tec_ascension_type_technological_desc:0 "Technological Ascensions are grounded on a heavy use of technology to replace, either partially or completely, your empire species composition and bodies. It has a heavy focus on performance in exchange of drawbacks or radical changes. Cybernetics, Synthetic and Digital paths compose the main foundation of this type of Ascensions."
 	concept_tec_ascension_type_technological_synthetics:0 "$concept_tec_ascension_type_technological$"
 	concept_tec_ascension_type_technological_synthetics_desc:0 "$concept_tec_ascension_type_technological_desc$"
 	concept_tec_ascension_type_mystical:0 "Mystical Ascension"
@@ -246,8 +246,8 @@
 	concept_tec_ascension_type_bioware:0 "Bioware Ascension"
 	concept_tec_ascension_type_bioware_desc:0 "."
 
-	concept_tec_ascension_type_virtual:0 "Virtualization Ascension"
-	concept_tec_ascension_type_virtual_desc:0 "."
+	concept_tec_ascension_type_digital:0 "Digitalization Ascension"
+	concept_tec_ascension_type_digital_desc:0 "."
 
 	concept_tec_ascension_type_psychic:0 "Psychic Ascension"
 	concept_tec_ascension_type_psychic_desc:0 "."
