--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -224,13 +224,13 @@
 # MYSTICAL PATHS
 # ------------------------------------------------------------
 # ------------------------------------------------- Esoteric Base
- # Generic
+ # Base
 	ap_mind_over_matter:0 "Mind Over Matter"
 	ap_mind_over_matter_desc:0 "$tec_loc_ap_type_mystical$ - $tec_loc_ap_type_base$\n\n§LOnly a fraction of the potential contained within our minds has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will.§!"
 	ap_mind_over_matter_gestalt:0 "Mind Over Matter"
 	ap_mind_over_matter_gestalt_desc:0 "$tec_loc_ap_type_mystical$ - $tec_loc_ap_type_base$\n\n§LOnly a fraction of the potential of the connection of our collective has been unlocked; we need to find a way to unleash it in order to materialize our thoughts, our will, as one.§!"
 
-	ap_mind_over_matter_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_mystical_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_mystical_neutral_t1$§! situation will help us to unlock our latent potential.\n\n"
+	ap_mind_over_matter_base_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_mystical_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_mystical_neutral_t1$§! situation will help us to unlock our latent potential.\n\n"
 	# Unlocks
 	tec_ap_unlock_tech_psionic_theory:0 "$tec_loc_ap_u_technology$ §H$tech_psionic_theory$§!\n- Provides the £society£ §Y$tech_psionic_theory$§! Technology as permanent research option.\n\n"
 	tec_ap_unlock_tech_telepathy:0 "$tec_loc_ap_u_technology$ §H$tech_telepathy$§!\n- Provides the £society£ §Y$tech_telepathy$§! Technology.\n\n"
@@ -339,7 +339,7 @@
 # BIOLOGICAL PATHS
 # ------------------------------------------------------------
 # ------------------------------------------------- Biological Base
- # Generic
+ # Base
 	ap_engineered_evolution:0 "Engineered Evolution"
 	ap_engineered_evolution_desc:0 "$tec_loc_ap_type_biological$ - $tec_loc_ap_type_base$\n\n§LTo leave our genetic destiny in the hands of nature is an inefficient and excruciatingly slow process. Why not jump-start the future of our species?§!"
 
@@ -419,20 +419,22 @@
 # CYBERNETIC PATH
 # ------------------------------------------------------------
 # ------------------------------------------------- Cybernetics Base
- # Generic
+ # Base
 	ap_the_flesh_is_weak:0 "The Flesh Is Weak"
 	ap_the_flesh_is_weak_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_base$\n\n§LRobotics and artificial intelligences are a great part of our society, with near every aspect of it merged into our day to day; Great advancements should be done in order to keep this status quo, as self improvement algorithms and new ways of delving into synthetic achievements can lead us to eventually achieve greatness.§!"
 
 	ap_the_flesh_is_weak_gestalt:0 "Organo-Machine Interfacing"
 	ap_the_flesh_is_weak_gestalt_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_base$\n\n§LWith the creation of new potential cybernetic bodily replacements for our drones, we can improve their efficiency and connection with our collective.§!"
 
-	ap_the_flesh_is_weak_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_cybernetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_cybernetics_neutral_t1$§! will help us to technologically augment our species.\n\n"
-	ap_the_flesh_is_weak_gestalt_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_cybernetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_cybernetics_neutral_t1$§! will help us devise a way to technologically augment our drones.\n\n"
+	ap_the_flesh_is_weak_base_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_cybernetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_cybernetics_neutral_t1$§! will help us to technologically augment our species.\n\n"
+	ap_the_flesh_is_weak_base_cyborg_tooltip:0 "TODO ASCENSION"
+	ap_the_flesh_is_weak_base_hive_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_cybernetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_cybernetics_neutral_t1$§! will help us devise a way to technologically augment our drones.\n\n"
+	ap_the_flesh_is_weak_base_machine_tooltip:0 "TODO ASCENSION"
 
 	tec_ap_unlock_tech_neuro_quantum_links:0 "$tec_loc_ap_u_technology$ §H$tech_neuro_quantum_links$§!\n- Provides the £physics£ §Y$tech_neuro_quantum_links$§! Technology."
  # /
  # Cybernetics
-	ap_the_flesh_is_weak_cybernetic:0 "The Flesh Is Weak"
+	ap_the_flesh_is_weak_cybernetic:0 "Cybernetic Augmentation"
 	ap_the_flesh_is_weak_cybernetic_desc:0 "$tec_loc_ap_type_technological_cybernetics$ - $tec_loc_ap_type_base$\n\n§LRobotics and artificial intelligences are a great part of our society, with near every aspect of it merged into our day to day; Great advancements should be done in order to keep this status quo, as self improvement algorithms and new ways of delving into synthetic achievements can lead us to eventually achieve greatness.§!"
 
 	ap_the_flesh_is_weak_cybernetic_tooltip:0 "$tec_loc_ap_chosen_path$ §ECybernetics§!\nWe are enhancing our species with mandatory §YCybernetic Implants§! ['concept_tec_trait_cybernetic_help_icon'].\n\n$tec_loc_ap_u_feature$ §HAutonetic Prowess§!\nThe integration of our population §YNegates§! or §!severely mitigates§! any potential rogue AI uprising or infiltration.\n\n"
@@ -491,14 +493,15 @@
 # ------------------------------------------------------------
 # Synthetic Evolution - Auto-Singularity
 # ------------------------------------------------- Synth T1
- # Generic
+ # Base
 	ap_synthetic_evolution:0 "Synthetic Evolution"
 	ap_synthetic_evolution_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nIt is time to abandon the flawed organic vessels that imprison our minds. By transferring our neural patterns into synthetic bodies, we will achieve a higher state of being."
 	ap_synthetic_evolution_machine_desc:0 "Synthetic Age"
 	ap_synthetic_evolution_machine_desc:0 "$tec_loc_ap_type_technological$ - $tec_loc_ap_type_transformative$\nIt is time to expand the capacities of our species, to drive evolution by our own design, our own code; New platforms and neural patterns to update, enhance and improve our drones, units and systems, will be tools to mold our future at our will."
 
-	ap_synthetic_evolution_generic_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_synthetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_synthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, the creation of new bodies and platforms to upload our consciousness to.\n\n"
-	ap_synthetic_evolution_generic_machine_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_synthetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_synthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, further unlocking our potential.\n\n"
+	ap_synthetic_evolution_base_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_synthetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_synthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, the creation of new bodies and platforms to upload our consciousness to.\n\n"
+	ap_synthetic_evolution_base_machine_tooltip:0 "$tec_loc_ap_u_situation$ §H$situation_tec_ascension_synthetics_neutral_t1$§! ['concept_tec_branching_paths_icon']\n- The §Y$situation_tec_ascension_synthetics_neutral_t1$§! situation will drive our advancements in synthetic development forward, further unlocking our potential.\n\n"
+	ap_synthetic_evolution_base_robot_tooltip:0 "TODO ASCENSION"
 	tec_ap_unlock_tech_synthetic_workers:0 "$tec_loc_ap_u_technology$ §H$tech_synthetic_workers$§!\n- Provides the £engineering£ §Y$tech_synthetic_workers$§! Technology as permanent research option.\n\n"
 	tec_ap_unlock_tech_synthetic_leaders:0 "$tec_loc_ap_u_technology$ §H$tech_synthetic_leaders$§!\n- Provides the £engineering£ §Y$tech_synthetic_leaders$§! Technology.\n\n"
 	tec_ap_unlock_tech_robomodding_m:0 "$tec_loc_ap_u_technology$ §H$tech_robomodding_m$§!\n- Provides the £engineering£ §Y$tech_robomodding_m$§! Technology.\n\n"
@@ -519,7 +522,7 @@
 
 	ap_synthetic_evolution_digital_tooltip:0 "$tec_loc_ap_chosen_path$ §BDigitalization§!\nWe are now able to upload our neural data into §Y£building£ Network Datacenters§!, using that data and capacity to improve the control and production of our empire.\n\n$tec_loc_ap_u_feature$ §HTODO ASCENSION§!\nTODO ASCENSION.\n\n"
 	ap_synthetic_evolution_digital_machine_tooltip:0 "$tec_loc_ap_chosen_path$ §BDigitalization§!\nWe are now able to migrate our platforms into non physical information stored in §Y£building£ Network Datacenters§!, using that data and capacity to improve the control and production of our collective.\n\n$tec_loc_ap_u_feature$ §HTODO ASCENSION§!\nTODO ASCENSION.\n\n"
-	ap_synthetic_evolution_mechanical_tradition:0 "$tec_loc_ap_u_tradition$ §HTODO ASCENSION§!\nUnlocks the §YTODO ASCENSION§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
+	ap_synthetic_evolution_digital_tradition:0 "$tec_loc_ap_u_tradition$ §HTODO ASCENSION§!\nUnlocks the §YTODO ASCENSION§! traditions after researching the provided technologies and completing the associated $tec_loc_situation$.\n\n$tec_tradition_unlock_evolved_paths$"
  # /
 # /
 
