control upload - UNSTABLE

--- a/localisation/english/replace/!_evolved_to_do_v10_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_v10_l_english.yml
@@ -2,14 +2,20 @@
 
 #v10 - Ascension Patch
 
-# Civics
+# Civic Tooltips
 	tec_urban_district_unusable_megacities:0 "§Y$trigger_tec_warning$ This district is unusable due to our Megapolis building standards!§!"
 	tec_urban_district_unusable_machine_extraction:0 "§Y$trigger_tec_warning$ This district is unusable due to our Extraction Capital!§!"
 	tec_urban_district_unusable_special_colony:0 "§Y$trigger_tec_warning$ This district is unusable in this Special Colony!§!"
+# /
+
+# Civics
+		civic_tec_origin_climate_survivors:0 "§P£tec_civic_origin£§!Climatic Survivors"
+		civic_tec_origin_climate_survivors_desc:0 "§EGeneric ['concept_tec_origin_civic']§!\n['concept_tec_climate_civic']\n\nIn the past, their world changed and radical climate catastrophes ended their civilization as they knew. But after strife and struggle, they thrived.\nWith a hostile world now tamed, impossible odds to survive now surpassed, this society has deeply changed and adapted to adversity."
+		civic_tec_origin_climate_survivors_tooltip:1 "$tec_loc_c_unlocks_feature$ §H£planet£ Against all Odds§!\n- TO DO.\n- to do.\n\n$tec_loc_c_unlocks_feature$ §H£planet£ TO DO§!\n- TO DO"
 
 # /
 
-# Ref
+# Ref / sort
 	building_tec_ref_1:0 "Orbital Mining Processor"
 	building_tec_ref_1_plural:0 "Orbital Mining Processors"
 	building_tec_ref_1_desc:0 "Large orbital modules repurposed to suit and agilize mineral extraction processes, refinement and transportation to logistic hubs."
