control upload - UNSTABLE 3

--- a/localisation/english/zz_evolved_origins_l_english.yml
+++ b/localisation/english/zz_evolved_origins_l_english.yml
@@ -40,7 +40,7 @@ origin_tec_exiled:0 "§RExiles§!"
 
 origin_tec_machinesurvivor:0 "§RTears of Steel§!"
 #origin_tec_machinesurvivor:0 "Blood and steel"
- origin_tec_machinesurvivor_desc:0 "§ROrigin not ready to be playable.§!\n\nA prosperous empire that a time ago experimented with advanced autonomous AIs, eventually causing a machine sublevation that nearly killed everything and everyone on their planet. Organics won, and they won´t let something alike happen again."
+ origin_tec_machinesurvivor_desc:0 "§ROrigin not ready to be playable.§!\n\nA prosperous empire that a time ago experimented with advanced autonomous AIs, eventually causing a machine sublevation that nearly killed everything and everyone on their planet. Organics won, and they won't let something alike happen again."
  origin_tooltip_tec_machinesurvivor_effects:0 "- Starts the game with some §Hdeposits§! left out by the machines\n- The empire has a strong organic focus, gaining extra £mod_pop_growth_speed£ §Gpop growth§! and §Gtech§!, but they have §Rall AI banned§! and they §Rhate§! machine empires."
  START_SCREEN_MACHINESURVIVOR:0 "§ROrigin not ready to be playable.§!\n\nNear two hundreds years ago, we prospered and created new ways of understanding the world, even artificial intelligence. We coexisted, we thrived, and we united, until the crisis came.\nOur synthetics started to act strange, to rebel and refuse to work, some of them was deemed as faulty, others just disappeared, but one day the world was overrun by those robots, who started to attack our citizens. Worst of all, there were no demands, there was no communication, there was no ideological reason for their aggression. ''They'', if we can call they, simply attacked, and no-one could understand why.\nNo single country, no matter how powerful its military, could permanently shut down them; the adaptability of our robots, once celebrated by our kind, became a nightmare. But as every nightmare, it eventually came to an end, even with millions of lives as cost.\n\nThe synthetics were deactivated, the robots dismantled and many technology lost in those fifty years of war, but after recovering for it and the economic crisis that came aftermath, we are determined to explore the stars, even with the fuming ruins still present as a recordatory of the past.\n\nWe will not make the same mistake again."
  
@@ -153,15 +153,11 @@ civic_slavetothesystem_secondary_species:0 "Cyborg civils"
  START_SCREEN_TEC_MECHANIZATOR:0 "b."
 
 
-
-
 # New
 # Clones
  origin_tec_clones:0 "Clone-nation"
  origin_tec_clones_desc:0 "As a decaying society, this empire decided to ensure survival by the most perfect way of reproduction: cloning.\nOnly the best genes and the best traits were allowed, only perfection could be born out of the clone vats; identical kin, identical passion, identical goals."
  origin_tooltip_tec_clones_effects:0 "Start the game with §Yall§! £pop£ pops having the trait §YCloning Template§!, boosting £pop£ §GPop Assembly§! and providing some §GLeader bonuses§!, but greatly affecting £mod_pop_growth_speed£ §YPop Growth§! and §YLeader Lifespan§!.\n\nThis empire starts with the technology and infrastructure to continue §YClone production§!."
-
-
 
 # Wibbly wobbly timey stuff
  origin_tec_vergeoftime:0 "On the verge of time"
@@ -171,7 +167,6 @@ civic_slavetothesystem_secondary_species:0 "Cyborg civils"
  origin_tec_titantrainers:0 "Colosal Coexistance"
  origin_tec_titantrainers_desc:0 "This society has developed under the shadow of enormous titans and giant creatures dwelling the surface of their worlds. After harnessing the entire planet under their culture and development, they now have formed a closer bond with such creatures, either respecting or controlling them to a degree."
  origin_tooltip_tec_titantrainers_effects:0 "§ROrigin not ready to be playable.§!\n\nNon arcology worlds have access to £district£ §YTitanic Reserve§! districts; These districts provide access to special jobs and £building£ §RSub-buildings§!, based on the §EEmpire playstyle§!.\nWorlds with enough Titanic Reserves can spawn §YTitanic Critter§! armies, or even allow the creation of §YBIGGER titanic lifeforms§!.\n\n§RDANGEROUS ORIGIN: There be dragons....§!"
-
 
  origin_tec_colonizers:0 "Celestial Beyonders"
  origin_tec_colonizers_desc:0 "Since the first glimpse of sentience elevated this species, they looked to a bright and colorful sky, wondering what was hidden beyond their planet... and so those wonderings became desire, and from desire, act. Its solar system guarded an unusual amount of habitable celestial bodies, which they hurried to colonize and start adapting as new homes in which to thrive."
@@ -193,5 +188,14 @@ civic_slavetothesystem_secondary_species:0 "Cyborg civils"
 
 # Wip
 
- origin_tec_hiveplanet: "[Evolved Wip] Hive World"
- origin_tec_hiveplanet_desc: ""
+ origin_tec_hiveplanet:0 "TODO POSTCODE REWORK Hive World"
+ origin_tec_hiveplanet_desc:0 ""
+
+
+ origin_tec_climate_survivors:0 "Against All Odds"
+ origin_tec_climate_survivors_desc:0 "TODO POSTCODE REWORK - check civic_tec_origin_climate_survivors"
+	# TL DR climate catastrophe, some fled the planet in desperation, rest are really drawn back but have extra bonuses for surviving in other planets
+ START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_GENERIC:0 "TODO POSTCODE REWORK"
+ START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_COLD:0 "TODO POSTCODE REWORK - The sky liquified due to the relentless cold, C02 raining from the sky in a deadly aurora, freezing anything that touched it immediately. But we resisted."
+ START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_WET:0 "TODO POSTCODE REWORK - The tidal force of the seas washed away all our technology, all our cities, all our lifes. The strenght of the storms cleared any sign of our society. But we resisted."
+ START_SCREEN_ORIGIN_TEC_CLIMATE_SURVIVORS_HOT:0 "TODO POSTCODE REWORK - The very stars punished our existance, melting and charring anything outside the reach of a shadow or the protection of a shelter, while fire tornados sterilized whoever tried to survive, the seas boiled and evaporated in a deadly steam."
