fix: fixed errors and forgotten renames

--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1039,13 +1039,13 @@ policy_goods_policy:0 "Consumer Goods Production"
  materialist_ethic_shift:0 "Materialist Imperative"
  materialist_ethic_shift_desc:0 "Things are, or are not; there is no such thing as faith or superstition; science, pragmatism and the eternal doubt are our most powerful weapons to fight ignorance and stupidity."
 
- industrial_ethic_shift_name:0 "Industrial Revolution"
- industrial_ethic_shift:0 "Industrial Revolution"
- industrial_ethic_shift_desc:0 "There is no mid point in development, it's all or nothing; and the fog of industry, the smell of new ships and amenities, and the shiny surface of new arcologies will eclipse that ''nothing'' for us"
+ industrialist_ethic_shift_name:0 "Industrial Revolution"
+ industrialist_ethic_shift:0 "Industrial Revolution"
+ industrialist_ethic_shift_desc:0 "There is no mid point in development, it's all or nothing; and the fog of industry, the smell of new ships and amenities, and the shiny surface of new arcologies will eclipse that ''nothing'' for us"
 
- green_ethic_shift_name:0 "Ecologist Initiative"
- green_ethic_shift:0 "Ecologist Initiative"
- green_ethic_shift_desc:0 "Resources are scarce, and worlds are our most valuable treasure; we must not destroy or extinguish our only way of survival, we must care and growth with nature."
+ ecologist_ethic_shift_name:0 "Ecologist Initiative"
+ ecologist_ethic_shift:0 "Ecologist Initiative"
+ ecologist_ethic_shift_desc:0 "Resources are scarce, and worlds are our most valuable treasure; we must not destroy or extinguish our only way of survival, we must care and growth with nature."
 
 
 
