--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -502,10 +502,10 @@
 	TEC_FAC_ECO_NO_RECYCL_DESC:0 "Not having any type of §YRecyclying§! campaign or having an industrial §YInfrastructural Fabrication§! policy §Rseverely displease§! the [Root.GetName]."
  # /
  # --------------- Promotion/Supression
-	suppressed_green:0 "$ethic_ecologist_adj$ Suppressed"
-	suppressed_green_desc:0 "The §H$ethic_ecologist$§! Ethic is being suppressed by the government."
-	promoted_green:0 "$ethic_ecologist_adj$ Promoted"
-	promoted_green_desc:0 "The §H$ethic_ecologist$§! Ethic is being promoted by the government."
+	suppressed_ecologist:0 "$ethic_ecologist_adj$ Suppressed"
+	suppressed_ecologist_desc:0 "The §H$ethic_ecologist$§! Ethic is being suppressed by the government."
+	promoted_ecologist:0 "$ethic_ecologist_adj$ Promoted"
+	promoted_ecologist_desc:0 "The §H$ethic_ecologist$§! Ethic is being promoted by the government."
  # /
 # /
 # ------------------------------------------------- Industrialist
@@ -555,10 +555,10 @@
 	TEC_FAC_IND_NO_ECOLOGIC_CGS_DESC:0 "Having an §YEcological Production§! Consumer Goods policy §Rseverely displease§! the [Root.GetName]."
  # /
  # --------------- Promotion/Supression
-	suppressed_industrial:0 "$ethic_industrialist_adj$ Suppressed"
-	suppressed_industrial_desc:0 "The §H$ethic_industrialist$§! Ethic is being suppressed by the government."
-	promoted_industrial:0 "$ethic_industrialist_adj$ Promoted"
-	promoted_industrial_desc:0 "The §H$ethic_industrialist$§! Ethic is being promoted by the government."
+	suppressed_industrialist:0 "$ethic_industrialist_adj$ Suppressed"
+	suppressed_industrialist_desc:0 "The §H$ethic_industrialist$§! Ethic is being suppressed by the government."
+	promoted_industrialist:0 "$ethic_industrialist_adj$ Promoted"
+	promoted_industrialist_desc:0 "The §H$ethic_industrialist$§! Ethic is being promoted by the government."
  # /
 # /
 # ------------------------------------------------- Elitist
