feat: megacorps priests all behave like prosperity preachers

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -4,6 +4,7 @@
 # ------------------------------------------------------------
  BRANCH_OFFICE_BUILDING:0 "Holding Building"
  BRANCH_OFFICE_BUILDINGS:0 "Holding Buildings"
+mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preacher£ $job_preacher_plural$"
 
 # GENERIC REPLACES
 # ------------------------------------------------------------
